# birthday-notificator

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  Makefile.local  docker-compose.yml
.github/workflows/: ci.yml  deb.yaml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  config_vars_testing.yaml  config_vars_testing.yaml.in  dynamic_config_fallback.json  secdist.json  static_config.yaml  static_config.yaml.in
debian/: changelog  control  files  rules
postgresql/schemas/: pg_birthday.sql
src/: birthday_notificator.cpp  birthday_notificator.hpp  birthday_notificator_test.cpp  bot.cpp  bot.hpp  button.cpp  button.hpp  hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/components/: birthday_notificator.cpp  birthday_notificator.hpp  birthday_notificator_test.cpp
src/components/bot/: component.cpp  component.hpp
src/components/bot/impl/: component.cpp  component.hpp  http_client.cpp  http_client.hpp  reply_markup.cpp  reply_markup.hpp
src/db/: birthdays.cpp  birthdays.hpp  users.cpp  users.hpp
src/messages/: CMakeLists.txt  button.proto
src/models/: birthday.cpp  birthday.hpp  button.cpp  button.hpp  time_point.hpp  user.hpp
tests/: CMakeLists.txt  conftest.py  requirements.txt  test_add_birthday.py  test_basic.py  test_birthday_notificator.py  test_bot_commands.py  test_next_birthdays.py  test_next_birthdays_new.py  test_register.py  test_unregister.py
